--- a/index.html
+++ b/index.html
@@ -4,19 +4,101 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #ffffff;
+            margin: 20px;
+        }
+
+        form {
+            max-width: 400px;
+            margin: auto;
+            padding: 20px;
+            border-radius: 10px;
+            background-color: #f9f9f9;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        label {
+            display: block;
+            margin-bottom: 8px;
+            font-weight: bold;
+        }
+
+        input[type="text"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            background-color: #e0e0e0;
+            box-sizing: border-box;
+        }
+
+        input[type="submit"],
+        .button {
+            display: block;
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: none;
+            border-radius: 10px;
+            background-color: #007bff;
+            color: #ffffff;
+            font-size: 16px;
+            cursor: pointer;
+            text-align: center;
+        }
+
+        input[type="submit"]:hover,
+        .button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
     <form>
-        <label for="field1">Field 1:</label>
-        <input type="text" id="field1" name="field1"><br><br>
+        <label for="terminal_id">Terminal ID:</label>
+        <input type="text" id="terminal_id" name="terminal_id">
 
-        <label for="field2">Field 2:</label>
-        <input type="text" id="field2" name="field2"><br><br>
+        <label for="device_id">Device ID:</label>
+        <input type="text" id="device_id" name="device_id">
 
-        <label for="field3">Field 3:</label>
-        <input type="text" id="field3" name="field3"><br><br>
+        <label for="merchant_id">Merchant ID:</label>
+        <input type="text" id="merchant_id" name="merchant_id">
 
-        <input type="submit" value="Submit">
+        <label for="login">Login:</label>
+        <input type="text" id="login" name="login">
+
+        <input type="submit" value="Save Settings">
+        <div class="button" onclick="bindDevice()">Bind a Device</div>
+        <div class="button" onclick="unbindDevice()">Unbind a Device</div>
+        <div class="button" onclick="closeBusinessDay()">Close the Business Day</div>
+        <div class="button" onclick="close()">Close</div>
     </form>
+
+    <script>
+        function bindDevice() {
+            alert('Bind a Device button clicked');
+            // Add your JavaScript code for binding a device here
+        }
+
+        function unbindDevice() {
+            alert('Unbind a Device button clicked');
+            // Add your JavaScript code for unbinding a device here
+        }
+
+        function closeBusinessDay() {
+            alert('Close the Business Day button clicked');
+            // Add your JavaScript code for closing the business day here
+        }
+
+        function close() {
+            alert('Close button clicked');
+            // Add your JavaScript code for closing the form or other action here
+        }
+    </script>
 </body>
 </html>
+
