--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             font-size: 16px;
             cursor: pointer;
             text-align: center;
+            box-sizing: border-box;
         }
 
         input[type="submit"]:hover,
